--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGOURL = mongodb+srv: //edukondalujoga: Edushinchan@123@faq. 048wv.mongodb.net/?
-retryWrites=true&w=majority&appName=FAQ
+MONGOURL = mongodb+srv://edukondalujoga:Edushinchan%40123@faq.048wv.mongodb.net/?retryWrites=true&w=majority&appName=FAQ
