--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "FAQ management application with multi-language translation support",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "mocha --exit",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
